# sand-clock

./: .gitignore  README.md  pyproject.toml
src/sand_clock/: args.py  clock_decoder.py  consts.py  main.py  particle_calculation.py  sand_spawner.py  window.py
